# stylo

./: .gitignore  FUZZING.md  HACKING.md  dune-project  stylo.opam
ast-checker/: ast_checker.ml  ast_checker.mli  ast_mapper.ml  builtin_attributes.ml  builtin_attributes.mli  cst_checker.ml  cst_checker.mli  dune  lexer.mll  location.ml  location.mli  misc.ml  misc.mli  oxcaml_checker.ml  oxcaml_checker.mli  parser.mly  tokenisation_check.ml
comments/: comments.ml  dune  insert.ml  insert.mli
config/: config.ml
dbg_print/: dbg_print.ml
document/: core.ml  core.mli  document.ml  print.ml  utils.ml
lib/: dune  std.ml  stylo.ml  stylo.mli
lib/ast-checker/: cst_checker.ml  cst_checker.mli  debug.ml  dune  errors.ml  oxcaml_checker.ml  oxcaml_checker.mli  tokenisation_check.ml
lib/comments/: as_odoc_markup.ml  as_odoc_markup.mli  dune  insert.ml  insert.mli
lib/config/: config.ml  dune
lib/dbg_print/: dbg_print.ml  dune
lib/normalize/: docstring_placement.ml  dune  erase_jane_syntax.ml  expression.ml  normalize.ml  pattern.ml  semicolon.ml
lib/parsing/: ast_helper.ml  ast_helper.mli  asttypes.mli  docstring.ml  docstrings.ml  docstrings.mli  dune  lexer.mli  lexer.mll  lexer_directive.ml  location.ml  location.mli  parse.ml  parser.mly  parser_tokens.mly  parser_types.ml  parser_types.mli  parsetree.ml  parsetree.mli  tokens.ml  tokens.mli  tokens_of_tree.ml  tokens_of_tree.mli
lib/printing/: docstring.ml  dune  object_type_at.ml  precedence.ml  preceeding.ml  print.ml  string_lit.ml  syntax.ml  toplevel_items.ml
lib/printing/document/: core.ml  core.mli  dune  print.ml  utils.ml
lib/traversals/: dune
normalize/: context.ml  dune  expression.ml  expression.mli  normalize.ml  normalize.mli  pattern.ml  pattern.mli  semicolon.ml  semicolon.mli  utils.ml  utils.mli
parse/: ast_helper.ml  ast_helper.mli  builtin_attributes.mli  docstrings.mli  dune  lexer.mll  location.mli  longident.ml  parser.mly  parsetree.mli
parsing/: ast_helper.ml  ast_helper.mli  ast_mapper.ml  ast_mapper.mli  ast_reduce.ml  ast_reduce.mli  ast_traverse.ml  ast_traverse.mli  asttypes.mli  builtin_attributes.ml  builtin_attributes.mli  docstring.ml  docstrings.ml  docstrings.mli  dune  gen_symbol_tree_of_production.ml  lexer.mli  lexer.mll  location.ml  location.mli  longident.ml  longident.mli  ocaml_syntax.ml  parse.ml  parse.mli  parser.ml  parser.mly  parser_tokens.mly  parser_types.ml  parser_types.mli  parsetree.ml  parsetree.mli  tokenStream.ml  tokens.ml  tokens.mli  tokens_of_tree.ml  tokens_of_tree.mli
parsing/gen_visitors/: dune  gen_mapper.ml  gen_reducer.ml
print/: dune  print.ml  syntax.ml
printing/: dune  object_type_at.ml  object_type_at.mli  precedence.ml  precedence.mli  preceeding.ml  preceeding.mli  print.ml  string_lit.ml  string_lit.mli  syntax.ml  syntax.mli  toplevel_items.ml  toplevel_items.mli
printing/document/: column_based_buffer.ml  core.ml  core.mli  document.ml  dune  print.ml  print.mli  printing_buffer_intf.ml  regular_buffer.ml  regular_buffer.mli  utils.ml  utils.mli
syntax/: ast_helper.ml  ast_helper.mli  docstring.ml  docstrings.ml  docstrings.mli  dune  lexer.mli  lexer.mll  location.ml  parser.mly  parser_tokens.mly  parser_types.ml  parser_types.mli  parsetree.mli  tokens.ml
test/: dune  dune.inc  gen-dune.sh  tuples.ml
test/ast-check/: docstrings.ml  dune.inc  gen-dune.sh
test/correctness-checks/: dune  dune.inc  flush_hints_idempotence_issue.mli  gen-dune.sh  minimal_comments_idempotence.ml  trailing_semi.ml
test/erase-jane-syntax/: abstract_kinds.ml  abstract_kinds.ml.ref  borrow.ml  borrow.ml.ref  default_modalities.ml  default_modalities.ml.ref  default_modalities.mli  default_modalities.mli.ref  default_modalities2.mli  default_modalities2.mli.ref  default_modalities3.mli  default_modalities3.mli.ref  default_modalities4.mli  default_modalities4.mli.ref  dune  dune.inc  gen-dune.sh  implicit_source_position.ml  implicit_source_position.ml.ref  kind_substitutions.ml  kind_substitutions.ml.ref  layout_annotation.ml  layout_annotation.ml.ref  local.ml  local.ml.ref  local_erased.ml  local_erased.ml.ref  modes.ml  modes.ml.ref  stack.ml  stack.ml.ref  unboxed_literals.ml  unboxed_literals.ml.ref  unboxed_record.ml  unboxed_record.ml.ref  unboxed_records_cmts_attrs.ml  unboxed_records_cmts_attrs.ml.ref  unboxed_tuples.ml  unboxed_tuples.ml.ref  unboxed_tuples_cmts_attrs.ml  (+5 more)
test/fuzzing/: dune
test/layout/: cinaps.ml  cinaps.ml.stylo  comments_insertion.ml  comments_insertion.ref  disappearing_and_requirement_update.15.ml  disappearing_and_requirement_update.15.ml.stylo  docstring_placement.ml  docstring_placement.ml.stylo  dune  dune.inc  flat_non_flat_groups_and_comments.ml  flat_non_flat_groups_and_comments.ml.stylo  flat_non_flat_groups_and_comments.ref  flushhint_induced_reorderings.ml.stylo  gen-dune.sh  jst_comment_kinds.mli  jst_comment_kinds.mli.stylo  lexer_directives.ml.stylo  odoc_markup.mli.stylo  odoc_markup_no_docstring.mli.stylo  odoc_markup_split.mli  odoc_markup_split.mli.stylo  preceeding_and_comments.ml  preceeding_and_comments.ml.stylo  relative_nest.ml  relative_nest.ref  single_case_optional_pipe.ml.stylo  tuples.ml  tuples.ml.stylo  tuples.ref
test/layout/failing/: dune  dune.inc  ext_attributes.ml  ext_attributes.oxcamlformat-ref  ext_attributes.ref  relative_nest.ocamlformat-ref  relative_nest.ref  single_case_optional_pipe.ml  single_case_optional_pipe.oxcamlformat-ref  string_lits.ml  string_lits.oxcamlformat-ref  string_lits.ref  tuples.oxcamlformat-ref
test/layout/passing/: comments_insertion.ref  dune  dune.inc  lexer_directives.ml  lexer_directives.ref  odoc_markup.oxcamlformat-ref
tools/: diff-grammar.sh  dune  nvim-inspector.lua  spread_fuzzer_tests.ml  strip_comments.ml
tools/print-grammar/: dune  print_grammar.ml
traversals/: dune  gen.ml  gen_mapper.ml  traversals_helpers.ml
wrapprint/: dune  wrapprint.ml
