(ocamllex lexer)

(rule
  (targets parser_tokens.ml parser_tokens.mli)
  (action
    (run menhir --table --inspection --only-tokens %{dep:parser_tokens.mly})))

(menhir
  (modules parser parser_tokens)
  (merge_into parser)
  (flags :standard --table --inspection --external-tokens Parser_tokens --cmly))

(library
  (name ocaml_syntax)
  (modules_without_implementation asttypes)
  (libraries menhirLib dbg_print)
  (preprocess
    (per_module
      ((pps visitors.ppx) parsetree)))
  (flags :standard -w -9-63 -open Dbg_print))
