(ocamllex lexer)

(rule
  (targets parser_tokens.ml parser_tokens.mli)
  (action
    (run menhir --strategy simplified --table --inspection --only-tokens %{dep:parser_tokens.mly})))

(menhir
  (modules parser parser_tokens)
  (merge_into parser)
  (flags :standard --lalr --strategy simplified --table --inspection --external-tokens Parser_tokens --cmly))

(rule
  (target raw_grammar)
  (deps parser.mly parser_tokens.mly)
  (action
    (with-stdout-to %{target}
     (run menhir --external-tokens Parser_tokens --only-preprocess-u
          --base parser %{deps}))))

(library
  (name ocaml_syntax)
  (modules_without_implementation asttypes)
  (libraries menhirLib dbg_print)
  (flags :standard -w -9-63 -open Dbg_print))

;; Can't explicitely depend on a .cmt ...
;; So we depend on the cmo and pray for a cmt to be next to it and not stale
;;
;; Cf. https://github.com/ocaml/dune/issues/12633

(rule
  (target ast_mapper.ml)
  (deps %{cmo:parsetree} %{cmo:longident} %{cmo:tokens} %{cmi:asttypes}
        %{cmo:location})
  (action
    (with-stdout-to %{target}
      (run ./gen_visitors/gen_mapper.exe %{deps}))))

(rule
  (target ast_reduce.ml)
  (deps %{cmo:parsetree} %{cmo:longident} %{cmo:tokens} %{cmi:asttypes}
        %{cmo:location})
  (action
    (with-stdout-to %{target}
      (run ./gen_visitors/gen_reducer.exe %{deps}))))
