(ocamllex lexer)

(rule
  (targets parser_tokens.ml parser_tokens.mli)
  (action
    (run menhir --strategy simplified --table --inspection --only-tokens %{dep:parser_tokens.mly})))

(menhir
  (modules parser parser_tokens)
  (merge_into parser)
  (flags :standard --lalr --strategy simplified --table --inspection --external-tokens Parser_tokens --cmly))

(rule
  (target raw_grammar)
  (deps parser.mly parser_tokens.mly)
  (action
    (with-stdout-to %{target}
     (run menhir --external-tokens Parser_tokens --only-preprocess-u
          --base parser %{deps}))))

(library
  (name ocaml_syntax)
  (modules_without_implementation asttypes)
  (libraries menhirLib dbg_print)
  (flags :standard -w -9-63 -open Dbg_print))

(rule
  (target traversals.ml)
  (deps location.mli tokens.ml longident.mli asttypes.mli parsetree.ml
        parser_tokens.ml docstring.ml lexer_directive.ml)
  (action
    (with-stdout-to %{target}
      (run ../traversals/gen.exe --with-fold %{deps}))))
