;; generated here and used in subdir because the computation of the directory
;; contents is otherwise cyclic (according to dune).

(rule
  (target exhaust-no-quotations)
  (enabled_if %{bin-available:ocamlgrammarfuzzer})
  (mode fallback)
  (action
    (with-stdout-to %{target}
      (run
        ocamlgrammarfuzzer --cmly %{dep:../lib/parsing/parser.cmly} --exhaust
          --entrypoint implementation --entrypoint interface --print-entrypoint
          --avoid DOLLAR --avoid LESSLBRACKET --avoid RBRACKETGREATER
          ; HASH_CHAR is present in our grammar but not in the one the fuzzer is
          ; built against.
          --terminal "BORROW=borrow_"
          --terminal "HASH_CHAR=#'a'"
          --terminal "HASHFALSE=#false"
          --terminal "HASHTRUE=#true"
          --terminal "KIND=kind_"
          --terminal "LEXER_DIRECTIVE=#syntax foo on"
          --terminal "POLY=poly"
          --terminal "REPR=repr_"
          ))))

(rule
  (target exhaust-quotations)
  (enabled_if %{bin-available:ocamlgrammarfuzzer})
  (mode fallback)
  (action
    (with-stdout-to %{target}
      (run
        ocamlgrammarfuzzer --cmly %{dep:../lib/parsing/parser.cmly}
          --entrypoint implementation --print-entrypoint
          --focus DOLLAR --focus LESSLBRACKET --focus RBRACKETGREATER
          ; HASH_CHAR is present in our grammar but not in the one the fuzzer is
          ; built against.
          --terminal "BORROW=borrow_"
          --terminal "HASH_CHAR=#'a'"
          --terminal "HASHFALSE=#false"
          --terminal "HASHTRUE=#true"
          --terminal "KIND=kind_"
          --terminal "LEXER_DIRECTIVE=#syntax foo on"
          --terminal "POLY=poly"
          --terminal "REPR=repr_"
          ))))
