(alias
  (name runtest)
  (deps (alias fuzz)))

(rule
  (alias fuzz)
  (enabled_if %{file-available:../exhaust})
  (action
    (run ../../bin/fuzzer_driver.exe --cmd %{dep:../../bin/stylo.exe} -j 8 %{dep:../exhaust})))

(rule
  (aliases fuzz runtest)
  (enabled_if (and (not %{file-available:../exhaust})
                   (not %{bin-available:formatpinata})))
  (action (echo "Fuzzer output not present and can't be generated.")))
