(include dune.inc)

(rule
 (aliases all default runtest)
 (target odoc_markup_no_docstring.mli)
 (deps odoc_markup.mli)
 (action
   (with-stdout-to %{target}
     (bash "sed -e 's/(\\*\\*/(*/g' %{deps}"))))

(rule
 (aliases all default runtest)
 (deps ./gen-dune.sh (glob_files *.{ml,mli,stylo}))
 (action
   (progn
     (with-stdout-to dune.inc.gen
       (bash "./gen-dune.sh %{deps}"))
     (diff? dune.inc dune.inc.gen))))

